[package]
name = "ecd-token-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.48"
tokio = { version = "1.32", features = ["sync", "macros", "rt-multi-thread"] }
clap = { version = "4.4.5", features = ["derive"] }
axum = "0.6.20"
chromiumoxide = { version = "0.5.1", features = ["tokio", "tokio-runtime"], default-features = false }
anyhow = "1.0.75"
futures = "0.3.28"
serde = "1.0.188"
serde_json = "1.0.107"
strum = { version = "0.25.0", features = ["derive"] }
